unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/Alarme__c.field-meta.xml
<CustomField>
    <fullName>Alarme__c</fullName>
    <label>Alarme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non</fullName>
                <default>true</default>
                <label>Non</label>
            </value>
            <value>
                <fullName>Oui</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>