unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/Caisson_anti_bruit__c.field-meta.xml
<CustomField>
    <fullName>Caisson_anti_bruit__c</fullName>
    <label>Caisson anti-bruit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non</fullName>
                <default>true</default>
                <label>Non</label>
            </value>
            <value>
                <fullName>Oui</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>