unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <label>Installation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installation au sol en extérieur</fullName>
            </value>
            <value>
                <fullName>Mise à quai sur béquilles</fullName>
            </value>
            <value>
                <fullName>Mise à quai sur gueuses</fullName>
            </value>
            <value>
                <fullName>Installation en intérieur</fullName>
            </value>
            <value>
                <fullName>Mise à quai réalisé par le client</fullName>
            </value>
            <value>
                <fullName>Installation au sol en extérieur avec calage</fullName>
                <isActive>false</isActive>
                <label>Installation au sol en extérieur avec calage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>