unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/PO_ExtID__c.field-meta.xml
<CustomField>
    <fullName>PO_ExtID__c</fullName>
    <externalId>true</externalId>
    <label>PO ExtID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>