unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__Bundled__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Bundled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that related product is bundled with the main product. Bundled options have fixed quantity and zero price.</description>
    <inlineHelpText>Sélectionnez cette case pour indiquer que le produit associé est groupé avec le produit principal. Les options d&#39;offres groupées ont une quantité fixe et un prix nul, car le prix est inclus dans le produit principal. Laissez cette case désactivée si le prix doit être ajouté à l&#39;option.</inlineHelpText>
    <label>Bundled</label>
    <type>Checkbox</type>
</CustomField>