unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__ComponentDescription__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ComponentDescription__c</fullName>
    <description>Description for the component represented by this option. This is used in conjunction with the Configured Description Pattern field on the Product object.</description>
    <inlineHelpText>Description du composant représenté par cette option. Il est utilisé avec le champ Modèle de description configuré dans l&#39;objet Produit.</inlineHelpText>
    <label>Component Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>