unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__DefaultPricingTable__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__DefaultPricingTable__c</fullName>
    <inlineHelpText>Sélectionnez le tableau de tarification de ce produit à afficher par défaut lors de la définition des dimensions de prix.</inlineHelpText>
    <label>Default Pricing Table</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Segmented</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>