unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__Discount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Discount__c</fullName>
    <description>Discount (%), based on the field, when the product referenced for this option is offered standalone. But, you&#39;ll need to extend a discount if purchased a part of this product bundled.</description>
    <inlineHelpText>Saisissez une remise (%) basée sur le champ, lorsque le produit référencé pour cette option est offert seul. Cependant, vous devez étendre une remise si le produit fait partie d&#39;une offre groupée.</inlineHelpText>
    <label>Discount (%)</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>