unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__DiscountAmount__c</fullName>
    <description>Discount (Amt), based on the field, when the product referenced for this option is offered standalone. But, you&#39;ll need to extend a discount if purchased a part of this product bundled.</description>
    <inlineHelpText>Remise (montant) basée sur le champ, lorsque le produit référencé pour cette option est offert seul. Cependant, vous devez étendre une remise si le produit fait partie d&#39;une offre groupée.</inlineHelpText>
    <label>Discount (Amt)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>