unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__Number__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Number__c</fullName>
    <description>Sequential number that determines this option&#39;s sort order.</description>
    <inlineHelpText>Définit l&#39;ordre d&#39;affichage de cette option dans la fonctionnalité à laquelle elle est associée.</inlineHelpText>
    <label>Number</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>