unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__OptionalSKU__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__OptionalSKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product SKU added if this option is selected.</description>
    <inlineHelpText>Saisissez ou référencez l&#39;unité de gestion de stock du produit qui doit être ajoutée lors de la sélection de ce produit.</inlineHelpText>
    <label>Optional SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Optional For</relationshipLabel>
    <relationshipName>OptionalFor</relationshipName>
    <type>Lookup</type>
</CustomField>