unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__Quantity__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Quantity__c</fullName>
    <description>Quantity of the related product that should be added to the quote.</description>
    <inlineHelpText>Quantité du produit associé qui doit être ajouté au devis.</inlineHelpText>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>