unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__QuantityEditable__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__QuantityEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that determines whether option quantity is editable regardless of Quantity being specified.</description>
    <inlineHelpText>Sélectionnez cette case pour autoriser la modification de la quantité, même lorsque cela est spécifié sur l&#39;option.</inlineHelpText>
    <label>Quantity Editable</label>
    <type>Checkbox</type>
</CustomField>