unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__QuoteLineVisibility__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__QuoteLineVisibility__c</fullName>
    <description>Determines when quote line generated by this option is visible. If your product bundle components are only used to calculate the price of the bundle, you can hide components from users by using this field.</description>
    <inlineHelpText>Configurez la visibilité de la ligne de devis générée par cette option.</inlineHelpText>
    <label>Quote Line Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Editor Only</fullName>
            </value>
            <value>
                <fullName>Document Only</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>