unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__RenewalProductOption__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RenewalProductOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product option that replaces this product option on renewal.</description>
    <inlineHelpText>Option produit qui remplace cette option produit lors d&#39;un renouvellement. Utilisez-la pour générer un devis avec une Unité de gestion de stock différente lors du renouvellement.</inlineHelpText>
    <label>Renewal Product Option</label>
    <referenceTo>SBQQ__ProductOption__c</referenceTo>
    <relationshipLabel>Product Options</relationshipLabel>
    <relationshipName>ProductOptions</relationshipName>
    <type>Lookup</type>
</CustomField>