unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__Selected__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this option should be selected by default.</description>
    <inlineHelpText>Sélectionnez cette case si cette option produit doit être automatiquement sélectionnée par défaut.</inlineHelpText>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>