unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__System__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this option as managed by the system which means users can not manually select or deselect.</description>
    <inlineHelpText>Sélectionnez la case pour indiquer que cette option est gérée par le système, ce qui signifie que l&#39;utilisateur ne peut plus la sélectionner.</inlineHelpText>
    <label>System</label>
    <type>Checkbox</type>
</CustomField>