unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Type__c</fullName>
    <description>Type of this option.</description>
    <inlineHelpText>Utilisez « Composant » si cette option, y compris la quantité, dépend du parent. Utilisez « Accessoire » si cette option dépend du parent, mais que la quantité est indépendante. Utilisez « Produit associé » pour associée, mais totalement indépendante des produits.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Component</fullName>
                <default>true</default>
                <label>Component</label>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Related Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>