unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__UpliftedByPackage__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpliftedByPackage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to automatically apply uplift from parent package to this component. Only applies to components that are multi-segmented products.</description>
    <inlineHelpText>Sélectionnez cette case pour appliquer automatiquement l&#39;augmentation à partir du package parent de ce composant. S&#39;applique uniquement aux composants qui sont des produits à segments multiples.</inlineHelpText>
    <label>Uplifted By Package</label>
    <type>Checkbox</type>
</CustomField>