unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/Tech_Caracteristique__c.field-meta.xml
<CustomField>
    <fullName>Tech_Caracteristique__c</fullName>
    <formula>text( SBQQ__ConfiguredSKU__r.Caracteristiques__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Caracteristique</label>
    <type>Text</type>
</CustomField>