unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/Tech_Temperature_Parc__c.field-meta.xml
<CustomField>
    <fullName>Tech_Temperature_Parc__c</fullName>
    <formula>Text(CurrencyIsoCode) = &quot;Euro&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Temperature Parc</label>
    <type>Checkbox</type>
</CustomField>